# castep_dos_rust

./: .gitignore  Cargo.toml  README.md
castep_dos/: Cargo.toml
castep_dos/src/: config.rs  lib.rs  main.rs  plot.rs
castep_dos/src/projector/: config.rs
castep_dos_core/: Cargo.toml  Mg2SiO4_Dy_Bandstr_edft_Dy_pdos.csv  cosxmos2_DOS_down.csv  cosxmos2_DOS_up.csv  test.csv  test_bin.csv
castep_dos_core/src/: lib.rs  pdos_compute.rs  pdos_weights_parser.rs
castep_dos_core/src/bands/: mod.rs  parser.rs
castep_dos_core/src/fundamental/: angular_momentum.rs  data_expression.rs  ergonomics_impl.rs  mod.rs  spin_data.rs  spins.rs  test.rs
castep_dos_core/src/fundamental/pdos_file/: header.rs  mod.rs  parsing_intermediates.rs
castep_dos_core/src/projectors/: config.rs  mod.rs
castep_dos_parser/: Cargo.toml
castep_dos_parser/src/: helper.rs  lib.rs  parser.rs  pdos_weight_data.rs
castep_dos_parser/src/pdos_weight_data/: mod.rs  num_spins.rs  spin_index.rs
castep_pdos_parser/: Cargo.toml
castep_pdos_parser/src/: parser.rs
castep_pdos_parser/src/pdos_weight_data/: angular_momentum.rs  header.rs  mod.rs  orbital.rs
castep_pdos_parser/src/projectors/: config.rs
