[package]
name = "castep_dos_core"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
ndarray = { version = "0.16.1", features = ["rayon"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.23"
winnow = { version = "0.7.11", features = ["simd"] }

[dev-dependencies]
plotters = { version = "0.3.7", default-features = false, features = [
	"ab_glyph",
	"svg_backend",
	"line_series",
] }
